@@ -455,7 +455,10 @@ function generate_thumbnail($filename) {
 		}
 		rotate_if_necessary($filename, $thumbnail_name);
 	} elseif (is_video($filename)) {
-		//shell_exec("HOME=/var/cache/pictor/ run-one avconv -ss 00:00:00 -i " . escapeshellarg("$filename") . " -vsync 1 -t 0.01 " . escapeshellarg("$thumbnail_name"));
+		if ($BATCH) {
+			echo "Rendering thumbnail [$filename] to [$thumbnail_name]...\n";
+		}
+		shell_exec("HOME=/var/cache/pictor/ run-one avconv -i " . escapeshellarg("$filename") . " -r 1 -ss 00:00:10 -f image2 -vframes 1 -s 130x130 -y " . escapeshellarg("$thumbnail_name"));
 		return;
 	}
 }
